solved double border between stations

--- a/board.css
+++ b/board.css
@@ -220,7 +220,7 @@ body{
     position:relative;
     opacity: 1;
     border-left: 5px solid transparent;
-    border-rirght:none;
+    border-right-width: 0px;
     border-image: url("./src/border_grey.png") 50 stretch;
 }
 
